Fixed mobile top margin spacing

--- a/css/style.css
+++ b/css/style.css
@@ -918,7 +918,7 @@ ul {
     top: 0;
     left: 0;
     width: 100%;
-    height: 70px;
+    height: 60px;
     background: #fff;
     z-index: 4000;
     padding: 0 20px;
@@ -928,8 +928,10 @@ ul {
 }
 
 .mobile-logo-img {
-    height: 40px;
+    height: 35px;
     width: auto;
+    margin-top: 5px;
+    /* Fine-tune vertical position */
 }
 
 .hamburger-btn {
@@ -1362,7 +1364,7 @@ ul {
     }
 
     .mobile-landing-container {
-        padding: 60px 30px;
+        padding: 10px 30px 40px;
         display: flex;
         flex-direction: column;
     }
@@ -1442,7 +1444,7 @@ ul {
     /* Section content (Galleries) */
     .content-section {
         display: none;
-        padding: 100px 20px 60px;
+        padding: 50px 20px 60px;
     }
 
     .content-section.active {
